@startuml LinkCommands
skinparam classAttributeIconSize 0
hide circle

abstract class Command {
    + {abstract} execute(notes : ArrayList<Note>, tags : List<String>, ui : UI, storage : Storage) : void
    + isExit() : boolean
}

class LinkNotesCommand
class UnlinkNotesCommand
class LinkBothNotesCommand
class UnlinkBothNotesCommand
class ListLinkedNotesCommand

' Inheritance
ListLinkedNotesCommand --> Command
LinkNotesCommand --> Command
UnlinkNotesCommand --> Command
LinkBothNotesCommand -up-> Command
UnlinkBothNotesCommand -up-> Command

@enduml